# ArxivSurveyAgent

./: .gitignore  DEPLOY_README.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start_api_server.py
frontend/literature-review-frontend/: index.html  package.json  start-dev.bat  start-frontend.bat  start-frontend.cmd  start.bat  start.ps1  tailwind.config.js  vetur.config.js  vite.config.ts
frontend/literature-review-frontend/src/: App.vue  main.ts  style.css
frontend/literature-review-frontend/src/api/: literature.ts
frontend/literature-review-frontend/src/assets/styles/: animations.css  base.css  element-plus.css  utilities.css
frontend/literature-review-frontend/src/components/: PaperCard.vue
frontend/literature-review-frontend/src/composables/: useSearch.ts
frontend/literature-review-frontend/src/router/: index.ts
frontend/literature-review-frontend/src/stores/: searchStore.ts  settingsStore.ts
frontend/literature-review-frontend/src/types/: paper.ts
frontend/literature-review-frontend/src/utils/: SimpleAnimations.ts
frontend/literature-review-frontend/src/views/: HomeView.vue  WelcomeView.vue
nginx/: nginx.conf
scripts/: deploy.sh  fix_frontend.py  quick_start.py  serve_frontend.py  setup.py  smart_start.py  start_all.py  start_backend_only.py  system_health_check.py  validate_config.py
src/assets/styles/: components-enhanced.css  icons.css  tech-theme.css
src/lit_review_agent/: __init__.py  agent.py  api_server.py  cli.py  exceptions.py
src/lit_review_agent/ai_core/: __init__.py  llm_manager.py  report_generator.py  summarizer.py  trend_analyzer.py
src/lit_review_agent/database/: __init__.py  user_db.py
src/lit_review_agent/middleware/: __init__.py  auth.py  rate_limit.py
src/lit_review_agent/processing/: __init__.py  chunking_strategy.py  embeddings_manager.py  text_processor.py  vector_store.py
src/lit_review_agent/retrieval/: __init__.py  arxiv_client.py  base_retriever.py  pdf_processor.py
src/lit_review_agent/utils/: __init__.py  cache_manager.py  config.py  display.py  helpers.py  logger.py  performance_monitor.py
